[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Medusa/Medusa.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.25

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.2
bottom_radius = 0.25
height = 1.5

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )
size = Vector3( 0.301, 0.149, 0.1 )

[sub_resource type="SpatialMaterial" id=5]
flags_no_depth_test = true
flags_do_not_receive_shadows = true
albedo_color = Color( 0.0313726, 0.988235, 0.156863, 1 )

[sub_resource type="PrismMesh" id=6]
material = SubResource( 5 )
size = Vector3( 0.2, 0.2, 0.2 )

[node name="Medusa" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.75, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.745606, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.412293, 0.223691 )
mesh = SubResource( 4 )
material/0 = null

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.745177, 0 )
enabled = true
cast_to = Vector3( 0, 0, 4 )

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="DebugTarget" type="MeshInstance" parent="."]
mesh = SubResource( 6 )
material/0 = null

[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
